# timelogger

./: .gitignore  AGENTS.md  README.md  config.json  install.sh  plan.txt  pyproject.toml  requirements.txt  rules.json  timelogger.desktop  timelogger.service
logger/: __main__.py  config.py  db.py  rules.py
tests/: test_integration.py
tests/logger/: test_config.py  test_db.py  test_rules.py  test_rules_edge_cases.py
tests/tui/: test_export.py  test_queries.py
tui/: __main__.py  app.py  export.py  queries.py
